<resources>
    <string name="app_name">Android学习计划</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="main_interface">点击进入学习Android</string>
	<string name="contents">主要内容</string>
	<string name="query">查询</string>
	<string name="delete">删除</string>
	<string name="insert">插入</string>
	<string name="update">更新</string>
	<string name="search">搜索</string>
	<string name="detail">详细</string>
	<string name="add">增加</string>
	<string name="name">名字</string>
	<string name="number">电话</string>
	<string name="mail">邮件</string>
	<string name="start">开始</string>
	<string name="stop">停止</string>
	<string name="bindService">绑定Service</string>
	<string name="unBindService">解除Service</string>
	<string name="getInfo">获取Count</string>
	<string name="startService">启动普通Service</string>
	<string name="startIntentService">启动IntentService</string>
	<string name="getServiceSts">获取远程Service的状态</string>
	<string name="color">颜色</string>
	<string name="weight">体重</string>
	<string name="InputName"> 请输入用户名 </string>
	<string name="FourContentsActivity">第四章内容</string>
	<string name="TenContentsActivity">TenContentsActivity</string>
	<string name="FirstServiceTest">FirstServiceTest</string>
	<string name="BindServiceTest">BindServiceTest</string>
	<string name="IntentServiceTest">IntentServiceTest</string>
	<string name="AidlClient">AidlClient</string>
	<string name="ComplexClient">ComplexClient</string>
	<string name="MonitorPhone">MonitorPhone </string>
	<string name="TelephonyStatus">TelephonyStatus</string>
	<string name="BlockMain">BlockMain</string>
	<string name="managerBlack"> 管理黑名单 </string>
	<string name="SmsManager">发送短信</string>
	<string name="sendmessage"> 发送 </string>
	<string name="GroupSend">短信群发</string>
	<string name="sendGroupMsg">群发短信</string>
	<string name="select">选择</string>
	<string name="AudioManager"> 音频管理 </string>
	<string name="toggle">toogle</string>
	<string name="play">播放</string>
	<string name="up">Vol+</string>
	<string name="down">Vol-</string>
	<string name="Vibrator">振动器</string>
	<string name="AlarmManager">闹钟管理</string>
	<string name="Alarming">闹钟时间到了</string>
	<string name="setTime">设定时间</string>
	<string name="AlarmChangeWallpaper"> 定时切换壁纸 </string>
	<string name="BroadcastMain">广播发送</string>
	<string name="sendBroadCast">发送广播</string>
	<string name="SortedBroadCast">顺序发送广播</string>
	<string name="SoundPoolActivity">短促音频播放</string>
	<string name="shot">射击声音</string>
	<string name="bomb">炸弹声音</string>
	<string name="arrow">火箭声音</string>
	<string name="VideoViewActivity">视频播放</string>
	<string name="SurfaceViewPlayView">SurfaceView视频播放</string>
	<string name="RecodeSound">录制音频</string>
	<string name="CaptureImage">拍照</string>
	<string name="ImageName">照片名称</string>
    <string name="RecordVideo">录制视频</string>
	<string name="StartActivity">跳转画面1</string>
	<string name="SecondActivity">跳转画面2</string>
	<string name="skip">跳转</string>
	<string name="back">返回</string>
	<string name="finish">终止</string>
	<string name="BundleActivity">使用Bundle传递数据  </string>
	<string name="ResultActivity">使用Bundle接收数据  </string>
	<string name="inputRegisterInformation">请输入您的注册信息</string>
	<string name="userName">用户名：</string>
	<string name="userPasswd">密码：</string>
	<string name="inputRegisterAccount">填写想注册的账号</string>
	<string name="sex">性别</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="register">注册</string>
	<string name="ActivityForResult">启动并获取Activity结果</string>
	<string name="chioceCity">选择您所在的城市</string>
	<string name="SelectCityActivity">选择城市</string>
	<string name="LifeCycle">Activity生命周期</string>
	<string name="LifeCycleSecondActivity">SecondActivity</string>
	<string name="StandardModeActivity">StandardMode</string>
	<string name="SingleTaskActivity">SingleTask第一个Activity</string>
	<string name="SingTaskSecondActivity">SingleTask第一个Activity</string>
	<string name="SelectBookActivity">Fragment的使用</string>
	<string name="CallBackHandler">基于回调的事件处理</string>
	<string name="ClickMe">点击我</string>
	<string name="CustomViewActivity">重写OnTouchEvent</string>
	<string name="ConfigurationActivity">Configuration测试</string>
	<string name="Orientation">屏幕类型</string>
	<string name="Navigation">导航</string>
	<string name="TouchStatus">显示Touch状态</string>
	<string name="MNC">显示移动网络信号</string>
	<string name="getPhoneSts">获取手机信息</string>
	<string name="changeOrientation">改变屏幕方向</string>
	<string name="ConfigurationChange">屏幕方向</string>
	<string name="Landscape">横向</string>
	<string name="Vertical">竖向</string>
	<string name="Button1">button1</string>
	<string name="Button2">button2</string>
	<string name="Button3">button3</string>
	<string name="ChronometerActivity">计时器</string>
	<string name="ToggleButtonActivity">ToggleButton测试</string>
	<string name="ImageViewActivity">图片浏览器</string>
	<string name="Increase">增加</string>
	<string name="Decrease">减少</string>
	<string name="Next">下一张</string>
	<string name="Prev">上一张</string>
	<string name="AutoPlay">自动播放</string>
	<string name="MyListActivity">ListActivity</string>
	<string name="SimpleAdapterTest">SimpleAdapter应用</string>
	<string name="BaseAdapterTest">BaseAdapter应用</string>
	<string name="AutoCompleteTextViewTest">AutoCompleteText应用</string>
	<string name="GridViewTest">GridView应用</string>
	<string name="SpinnerActivityTest">Spinner的应用</string>
	<string name="ExpandableListViewActivity">ExpandableListView的应用</string>
	<string name="GallaryActivity">Gallary的应用 </string>
	<string name="AdapterViewFliperActivity">AdapterViewFliper的应用</string>
	<string name="StackViewActivity">StackView的应用</string>
	<string name="TaskProgress">任务完成进度</string>
	<string name="ProgressBarActivity">ProgressBar的应用</string>
	<string name="Show">显示</string>
	<string name="Hide">隐藏</string>
	<string name="TitleProgressBar">TitleProgressBar显示</string>
	<string name="SeekBarActivity">SeekBar应用</string>
	<string name="RatingBarActivity">RatingBar的应用</string>
	<string name="Default">默认</string>
	<string name="ViewSwitcherActivity">ViewSwitcher的应用</string>
	<string name="ImageSwitcherActivity">ImageSwitcher的应用</string>
	<string name="TextSwitchActivity">TextSwitch的应用</string>
	<string name="ViewFlipperActivity">ViewFlipper的应用</string>
	<string name="TabHostActivity">TabHostActivity的应用</string>
	<string name="TabHost01">TabHost01</string>
	<string name="TabHost02">TabHost02</string>
	<string name="TabHost03">TabHost03</string>
	<string name="TabHost04">TabHost04</string>
	<string name="DialogActivity">Dialog的应用</string>
	<string name="ListDialogActivity">ListDialog的应用</string>
	<string name="SingChoiceDialogActivity">SingChoiceDialog的应用</string>
	<string name="MultiChoiceDialog">MultiChoiceDialog</string>
	<string name="CustomListDialog">CustomListDialog</string>
	<string name="PopupWindowActivity">PopupWindowActivity</string>
	<string name="DatePick">日期设定</string>
	<string name="TimePick">时间设定</string>
	<string name="NumerPick">数值设定</string>
	<string name="DateDialogActivity">DateDialog的应用</string>
	<string name="ProgerssDialogActivity">ProgerssDialog 的应用></string>
	<string name="ToastActivity">Toast的应用</string>
	<string name="SearchViewActivity">SearchView的应用</string>
	<string name="MenuTest">Menu应用</string>
	<string name="ActivityMenu">ActivityMenu</string>
	<string name="OtherActivity">OtherActivity</string>
	<string name="ContextMenuActivity">ContextMenuActivity 应用</string>
	<string name="MenuResourceActivity">MenuResource的应用</string>
	<string name="font_size">字体大小</string>
	<string name="font_10">font_10</string>
	<string name="font_12">font_12</string>
	<string name="font_14">font_14</string>
	<string name="font_16">font_16</string>
	<string name="font_18">font_18</string>
	<string name="plain_item">通常Item</string>
	<string name="font_color">字体颜色</string>
	<string name="font_red">红色</string>
	<string name="font_green">蓝色</string>
	<string name="font_blue">绿色</string>
	<string name="PopupMenuActivity">PopupMenu的应用</string>
	<string name="edit">编辑</string>
	<string name="exit">退出</string>
	<string name="ActionBarActivity">ActionBar的应用</string>
	<string name="showActionBar">显示ActionBar</string>
	<string name="hideActionBar">隐藏ActionBar</string>
	<string name="ComponentAttrActivity">Component 测试</string>
	<string name="ActionAttrActivity">ActionAttr 测试</string>
	<string name="SysActionActivity">SystemAction的应用</string>
	<string name="CheckContact">查看联系人</string>
	<string name="ReturnHome">ReturnHome</string>
	<string name="DataTypeOverride">DataTypeOverride</string>
	<string name="ActionDataActivity">ActionData的应用</string>
	<string name="MutiThreadClient">MutiThreadClient 的应用</string>
	<string name="SimpleClient">SimpleClient的应用</string>
	<string name="URLClient">URLClient 的应用 </string>
	<string name="MultiThreadDownActivity">MultiThreadDownActivity</string>
	<string name="defaultName">/mnt/sdcard/a.rar</string>
	<string name="download">下载</string>
	<string name="defaultPath">http://www.</string>
	<string name="MiniBrowser">MiniBrowser</string>
	<string name="ViewHtmlActivity">ViewHtmlActivity</string>
	<string name="Province">省份</string>
	<string name="city">城市</string>
	<string name="WeatherActivity">WeatherActivity</string>
	<string name="AddShortCutActivity">AddShortCutActivity</string>
	<string name="StateListDrawbleActivity">StateListDrawable的应用</string>
	<string name="LayerDrawablerActivity">LayerDrawabler的应用</string>
	<string name="ShapeDrawableActivity">ShapeDrawable的应用</string>
	<string name="ClipDrawableActivity">ClipDrawable的应用</string>
	<string name="AnimationDrawableActivity">AnimationDrawable的应用</string>
	<string name="explainXml">解析XML文件</string>
	<string name="XmlExplainActivity">XmlExplain的应用</string>
	<string name="MenuResActivity">MenuResActivity 的应用</string>
	<string name="StyleResActivity">Style的应用</string>
	<string name="AttrActivity">Attr的应用</string>
	<string name="StringValue">String的国际化应用</string>
	<string name="GetPostMainActivity">GetPostMainActivity 的应用</string>
	<string name="sendReq">发送Get请求</string>
	<string name="getReq">获取Post请求</string>
	<string name="TwoContentsActivity">第二章内容</string>
	<string name="ThreeContentsActivity">第三章内容</string>
	<string name="FiveContentsActivity">第五章内容</string>
	<string name="SixContentsActivity">第六章内容</string>
    <string name="SevenContentsActivity">第七章内容</string>
    <string name="EightContentsActivity">第八章内容</string>
    <string name="SharedPreferencesActivity">SharedPreferencesActivity</string>
    <string name="FileActivity">FileActivity</string>
    <string name="SDCardActivity">SDCardActivity</string>
    <string name="HandleSQLiteActivity">HandleSQLiteActivity</string>
    <string name="DictActivity">DictActivity</string>
    <string name="GestureTest">GestureTest</string>
    <string name="PageTurningActivity">PageTurningActivity</string>
    <string name="RecogniseGesture">RecogniseGesture</string>
    <string name="SpeechActivity">SpeechActivity</string>
    <string name="word">单词</string>
    <string name="explain">解释</string>
    <string name="ElevenContents">第十一章内容</string>
	<string name="ThirteenContentsActivity">第十三章内容</string>
	<string name="FourteenContentActivity">第十四张内容</string>
	<string name="FifteenContentsActivity">第十五章内容</string>
	<string name="SixteenContentsActivity">第十六章内容</string>
	<string name="SeventeenContentsActivity">第十七章内容</string>
	<string name="LinkMainActivity">第十八章内容</string>
	<string name="NineteenContentsActivity">第十九章内容</string>
	<string name="RingProfile">RingProfile</string>
	<string name="AllProvidersActivity">AllProvidersActivity的应用</string>
	<string name="LocationActivity">Location的应用</string>
	<string name="ProximityActivity">Proximity的应用</string>
	<string name="speech">朗读</string>
	<string name="record">录音</string>
	<string name="ring_and_vibrate">铃声和振动</string>
	<string name="ring">铃声</string>
	<string name="vibrate">振动</string>
	<string name="silent">静音</string>
	<string name="help">设置时间</string>
</resources>