<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<Button 
	    android:id="@+id/insert"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/insert"
	    android:onClick="insert"
	    />
	<Button 
	    android:id="@+id/update"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/update"
	    android:onClick="update"
	    />
	<Button 
	    android:id="@+id/query"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/query"
	    android:onClick="query"
	    />
	<Button
	    android:id="@+id/delete"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/delete"
	    android:onClick="delete"
	    />
	"
</LinearLayout>