<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    tools:context=".MainActivity" >

	<LinearLayout 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"	
		android:gravity="center_horizontal"    
	    >
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/nine_content_provider_add"
	        android:text="@string/add"
	        />
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/nine_content_provider_search"
	        android:text="@string/search"
	        />
	    
	</LinearLayout>

	<TextView 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/name"
	    />
	<EditText 
	    android:id="@+id/nine_content_provider_name_text"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    />
	<TextView 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/number"
	    />
	<EditText 
	    android:id="@+id/nine_content_provider_number_text"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    />
	<TextView 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/mail"
	    />
	<EditText 
	    android:id="@+id/nine_content_provider_email_text"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    />
</LinearLayout>