<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<EditText
	    android:id="@+id/eight_sqlite_open_helper_word_txt"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:hint="@string/word"
	    />
	
    <EditText
	    android:id="@+id/eight_sqlite_open_helper_explain_txt"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:hint="@string/explain"
		android:lines="3"
	    />
    
    <Button 
        android:id="@+id/eight_sqlite_open_helper_insert_btn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/insert"
        />
    
   <EditText
	    android:id="@+id/eight_sqlite_open_helper_query_txt"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:hint="@string/word"
	    />
   
   <Button 
        android:id="@+id/eight_sqlite_open_helper_query_btn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/query"
       />
    
</LinearLayout>
