<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <Button 
        android:id="@+id/eleven_sound_pool_main_bomb_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bomb"
        />
    <Button 
        android:id="@+id/eleven_sound_pool_main_arrow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow"
        />
    <Button 
        android:id="@+id/eleven_sound_pool_main_shot_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shot"
        />
</LinearLayout>
