<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<EditText
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/eight_handl_sqlite_key_txt"
	    android:hint="@string/Default"
	    />
	
	<EditText
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/eight_handle_sqlite_value_txt"
	    android:hint="@string/Default"
	    />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/eight_handle_sqlite_insert_btn"
		    android:text="@string/insert"
		    />
	    <Button 
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/eight_handle_sqlite_delete_btn"
		    android:text="@string/delete"
	        />
	    <Button 
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/eight_handle_sqlite_query_btn"
		    android:text="@string/query"
	        />
	</LinearLayout>

	
	
	<ListView 
	    android:id="@+id/eight_handle_sqlite_list"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    
	</ListView>
</LinearLayout>
