<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView
	    android:id="@+id/four_bundle_activity_result_name_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="18sp"
	    android:hint="@string/userName"
	    android:textIsSelectable="true"
	    />
    <TextView
	    android:id="@+id/four_bundle_activity_result_passwd_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="18sp"
	    android:hint="@string/userPasswd"
	    android:textIsSelectable="true"
	    />	
	<TextView
	    android:id="@+id/four_bundle_activity_result_gender_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="18sp"
	    android:hint="@string/sex"
	    android:textIsSelectable="true"
	    />
</LinearLayout>