<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical" >
	
    <RadioGroup
        android:id="@+id/ring_profile_fragment1_radiogroup"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        
        <RadioButton 
            android:id="@+id/ring_profile_fragment1_ring_and_vibrate"
            android:layout_width="match_parent"
            android:textSize="@dimen/ring_profile_text_size"
            android:paddingLeft="@dimen/ring_profile_padding_left"
            android:text="@string/ring_and_vibrate"
            />
        
        <RadioButton 
            android:id="@+id/ring_profile_fragment1_ring"
            android:layout_width="match_parent"
            android:textSize="@dimen/ring_profile_text_size"
            android:paddingLeft="@dimen/ring_profile_padding_left"
            android:text="@string/ring"
            />
        <RadioButton 
            android:id="@+id/ring_profile_fragment1_vibrate"
            android:layout_width="match_parent"
            android:textSize="@dimen/ring_profile_text_size"
            android:paddingLeft="@dimen/ring_profile_padding_left"
            android:text="@string/vibrate"
            />
        <RadioButton 
            android:id="@+id/ring_profile_fragment1_silent"
            android:layout_width="match_parent"
            android:textSize="@dimen/ring_profile_text_size"
            android:paddingLeft="@dimen/ring_profile_padding_left"
            android:text="@string/silent"
            />
    </RadioGroup>


</LinearLayout>
