<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <EditText 
        android:id="@+id/eight_speech_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Default"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/eight_speech_main_speech_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speech"
            />
        
        <Button 
            android:id="@+id/eight_speech_main_record_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            
            />
        
    </LinearLayout>
</LinearLayout>
