<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <EditText
        android:id="@+id/thirteen_multi_thread_main_text_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:hint="@string/defaultPath"
        />
    
    <EditText 
        android:id="@+id/thirteen_multi_thread_main_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultName"
        />

    <Button 
        android:id="@+id/thirteen_multi_thread_main_down_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download"
        />
    
    <ProgressBar 
        android:id="@+id/thirteen_multi_thread_main_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Horizontal"
        />
</LinearLayout>
